--- a/k8s/healthcare-deployment.yml
+++ b/k8s/healthcare-deployment.yml
@@ -1,1 +1,20 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: healthcare
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: healthcare
+  template:
+    metadata:
+      labels:
+        app: healthcare
+    spec:
+      containers:
+        - name: healthcare
+          image: shubhamgunjal1619/healthcare:latest
+          ports:
+            - containerPort: 8080
 
